--- a/scss/components/_research_construction_waves2.scss
+++ b/scss/components/_research_construction_waves2.scss
@@ -201,7 +201,7 @@
 
 		.resources {
 		  text-align: left;
-		  padding: 0 28px 0 0;
+		  padding: 0;
 		  display: flex;
 		  align-items: center;
 		  justify-content: flex-start;
