def page and menu update

--- a/scss/components/_alliance_defence.scss
+++ b/scss/components/_alliance_defence.scss
@@ -530,6 +530,7 @@
 
 		.ally_def_fleetcatch {
 		  font-size: 0.9rem;
+		  background: rgba($color-grey, .1);
 
 		  .ally_def_fleetcatch_fleet {
 			.ally_def_fleetcatch_fleet_name {
