--- a/scss/components/_universe.scss
+++ b/scss/components/_universe.scss
@@ -76,6 +76,13 @@ div[id^='page_universe_'] {
 
 		  tr {
 			background-color: $color-secondary;
+			transition: all .3s ease-in-out;
+
+			&:hover {
+			  td {
+				background-color: rgba(#fff, .06);
+			  }
+			}
 
 			&.relations_war {
 			  background: rgba($color-negative, .25);
@@ -166,7 +173,13 @@ div[id^='page_universe_'] {
 	  }
 
 	  tr {
+		opacity: .9;
 		margin: .125rem 0;
+		transition: all .3s ease-in-out;
+
+		&:hover {
+		  opacity: 1;
+		}
 
 		&:first-child {
 		  background: transparent;
@@ -196,11 +209,6 @@ div[id^='page_universe_'] {
 		th {
 		  padding: 0 2px;
 		}
-
-		//td {
-		//  display: flex;
-		//  align-items: center;
-		//}
 	  }
 	}
   }
@@ -575,13 +583,23 @@ div[id^='page_universe_'] {
 
 #page_universe,
 #page_universe_launches,
-#page_universe_covert_ops {
+#page_universe_covert_ops,
+#page_universe_feed,
+#page_universe_combat_reports {
   table {
 	width: 100%;
 	max-width: unset;
 
 	tr {
+	  &:hover {
+		td {
+		  background-color: rgba(#fff, .06);
+		}
+	  }
+
 	  td {
+		transition: all .3s ease-in-out;
+
 		&[colspan='4'],
 		&[colspan='5'],
 		&[colspan='6'],
