--- a/scss/components/_universe.scss
+++ b/scss/components/_universe.scss
@@ -384,9 +384,10 @@ div[id^='page_universe_'] {
 		  text-align: center;
 		  white-space: nowrap;
 		  text-overflow: ellipsis;
+		  padding: 3.5px 0 3.5px 7px;
 		  display: inline-block;
 		  overflow: hidden;
-		  width: 102px;
+		  width: 117px;
 		  float: right;
 		}
 	  }
