construction page edits

--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -22,7 +22,7 @@ select,
   vertical-align: middle;
   display: inline-block;
   background: rgba($color-secondary, .4);
-  height: 1.5rem;
+  height: 21px;
   border: 1px solid rgba($color-primary, .5);
   border-radius: 3px;
   box-shadow: inset 0 2px 4px 2px rgba(#000, .4);
