--- a/scss/components/_galaxy.scss
+++ b/scss/components/_galaxy.scss
@@ -2,7 +2,7 @@
   #contents {
 	.maintext .superhighlight {
 	  color: inherit;
-	  font-size: 1.5rem;
+	  font-size: 21px;
 	}
   }
 
@@ -13,7 +13,7 @@
 	  color: $color-primary;
 	  padding: 3.5px !important;
 	  min-width: 3rem;
-	  height: 1.5rem;
+	  height: 21px;
 	}
   }
 
