--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -103,8 +103,8 @@
 
 		&:before {
 		  color: rgba($color-primary, .5);
-		  font-size: 1.5rem;
-		  line-height: 1.5rem;
+		  font-size: 21px;
+		  line-height: 21px;
 		  vertical-align: middle;
 		  content: '\279f';
 		  position: relative;
@@ -112,7 +112,7 @@
 		}
 
 		a {
-		  line-height: 1.5rem;
+		  line-height: 21px;
 		}
 	  }
 	}
