--- a/scss/components/_page_content.scss
+++ b/scss/components/_page_content.scss
@@ -32,8 +32,8 @@
   padding: 0 0 0 .05rem;
   display: block;
   background: transparent;
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 21px;
+  height: 21px;
   border: 1px solid $color-primary;
   border-radius: 50%;
   margin: 7px 7px 7px auto;
