--- a/scss/components/_buttons_links.scss
+++ b/scss/components/_buttons_links.scss
@@ -118,7 +118,7 @@ ul.alliance_attack_claims_list a,
   padding: 0 7px;
   display: inline-block;
   background: rgba($color-secondary, .4) !important;
-  height: 1.5rem;
+  height: 21px;
   border: 1px solid rgba($color-primary, .5) !important;
   border-radius: 3px;
   box-shadow: inset 0 2px 4px 2px rgba(#000, .4);
