--- a/scss/components/_fleets.scss
+++ b/scss/components/_fleets.scss
@@ -141,7 +141,7 @@
 		margin: 0 auto;
 
 		a {
-		  line-height: 1.5rem !important;
+		  line-height: 21px !important;
 		  width: auto !important;
 		  margin: 0 0 0 5px !important;
 		}
