--- a/scss/components/_login_support_manual_stats.scss
+++ b/scss/components/_login_support_manual_stats.scss
@@ -223,7 +223,7 @@
   }
 
   span[style='font-size: 13pt;'] {
-	font-size: 1.5rem !important;
+	font-size: 21px !important;
 	display: block;
 	border-bottom: 1px solid rgba($color-primary, .5);
   }
