--- a/scss/components/_overview.scss
+++ b/scss/components/_overview.scss
@@ -168,7 +168,7 @@
   overflow: hidden;
   background: rgba($color-secondary, .4);
   width: 100px;
-  height: 1.5rem;
+  height: 21px;
   border: 1px solid rgba($color-primary, .5);
   border-radius: 4px;
   box-shadow: inset 0 2px 4px 2px rgba(black, .4), 0 1px 3px 3px rgba(black, .15);
@@ -176,7 +176,7 @@
 
   .progress_bar {
 	background: rgba($color-progress-completed, .6);
-	height: 1.5rem;
+	height: 21px;
   }
 
   .progress_expected {
