--- a/scss/components/_research_construction_waves2.scss
+++ b/scss/components/_research_construction_waves2.scss
@@ -27,8 +27,8 @@
 .scans {
   p {
 	font-size: 14px;
-	padding-right: 1.5rem;
-	padding-left: 1.5rem;
+	padding-right: 21px;
+	padding-left: 21px;
 	position: relative;
 
 	.desc_link {
@@ -120,7 +120,7 @@
 
 		  + p {
 			font-size: $text-small;
-			padding: 14px 50% 14px 28px;
+			padding: 7px 50% 7px 28px;
 			display: flex;
 			flex-direction: column;
 			background: $color-secondary-alt;
@@ -150,7 +150,7 @@
 		align-items: center;
 		justify-content: flex-end;
 		width: 100%;
-		margin-top: -58px;
+		margin-top: -43px;
 		z-index: 10;
 		order: 3;
 
@@ -206,15 +206,18 @@
 		  align-items: center;
 		  justify-content: flex-start;
 		  width: calc(100% - 241px);
-		  height: 30px;
-		  margin: 10.5px 0 0;
+		  height: 29px;
+		  margin: 0;
 		  order: 1;
 		  column-gap: 14px;
 
+		  &:nth-child(2) {
+			margin-bottom: -4px;
+		  }
+
 		  &:nth-child(3) {
-			height: 50px;
+			height: 29px;
 			border-top: 1px solid rgba($color-primary, .5);
-			margin-top: 10.5px;
 			order: 3;
 		  }
 
@@ -235,12 +238,12 @@
 		  align-items: center;
 		  justify-content: flex-end;
 		  width: 213px;
-		  height: 30px;
-		  margin: 10.5px 28px 0 0;
+		  height: 29px;
+		  margin: 0 28px 0 0;
 
 		  &:nth-child(1) {
 			width: 100%;
-			margin-bottom: 10.5px;
+			height: 29px;
 			order: 3;
 		  }
 
@@ -249,8 +252,12 @@
 			order: 2;
 		  }
 
+		  &:nth-child(3) {
+			margin-bottom: -4px;
+		  }
+
 		  &:nth-child(4) {
-			height: 50px;
+			height: 29px;
 			border-top: 1px solid rgba($color-primary, .5);
 			order: 4;
 		  }
@@ -265,9 +272,9 @@
 
 		  input {
 			&[type='checkbox'] {
-			  width: 1.5rem;
-			  height: 1.5rem;
-			  margin: 0 7px 0 0;
+			  width: 21px;
+			  height: 21px;
+			  margin: 0 4px 0 0;
 
 			  &:focus {
 				border: 1px solid rgba($color-negative, .5);
@@ -275,7 +282,7 @@
 
 			  &:before {
 				color: rgba($color-negative, .8);
-				font-size: 1.5rem;
+				font-size: 21px;
 				font-weight: bold;
 				content: '\2718';
 				display: block;
@@ -433,7 +440,7 @@
 		  }
 
 		  + p.research_queue {
-			padding-top: 1.5rem !important;
+			padding-top: 21px !important;
 			border-top: 1px solid rgba($color-primary, .5);
 			margin-top: 14px;
 		  }
