Kinthia color swap

--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -12,7 +12,8 @@ $color-cathaar: #4d88bc;
 $color-xandathrii: #2ba87e;
 $color-zikonian: #c93716;
 $color-eitraides: #c3af6c;
-$color-kinthia: #7745d2;
+//$color-kinthia: #7745d2;
+$color-kinthia: #b916c9;
 $color-slythonian: #c2146a;
 //
 $color-primary: #52a5f8;
