gal table is no longer max width

--- a/scss/components/_galaxy.scss
+++ b/scss/components/_galaxy.scss
@@ -18,13 +18,15 @@
   }
 
   table {
-	width: 100% !important;
+	width: 100%;
 
 	&:not(#galtable) {
 	  margin-bottom: 0;
 	}
 
 	&#galtable {
+	  width: auto;
+
 	  thead {
 		background: $color-background;
 
