--- a/scss/components/_galaxy.scss
+++ b/scss/components/_galaxy.scss
@@ -59,6 +59,11 @@
 		  }
 
 		  td {
+			&:nth-child(2),
+			&:nth-child(3), {
+			  font-size: 13px;
+			}
+
 			&:nth-child(9) {
 			  a {
 				color: $color-primary;
