--- a/scss/components/_research_construction_waves2.scss
+++ b/scss/components/_research_construction_waves2.scss
@@ -81,6 +81,10 @@
 		margin-top: 14px;
 	  }
 
+	  .superhighlight {
+		color: $color-primary;
+	  }
+
 	  .construction_info {
 		display: flex;
 		flex-basis: 100%;
