--- a/scss/components/_research_construction_waves2.scss
+++ b/scss/components/_research_construction_waves2.scss
@@ -232,7 +232,11 @@
 
 			&:nth-child(1) {
 			  font-size: $text-default;
-			  flex: auto;
+			}
+
+			.textvalue {
+			  display: inline-block;
+			  width: 62px;
 			}
 		  }
 		}
