--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,5 @@
 /*!
-*  v4.16
+*  v5.0
 *  This skin addon is designed to run with the r32 skin selected in PA preferences.
 *
 *  If this skin customisation adds even a tiny bit of enjoyment to your gaming experience it was well worth the countless hours of development.
@@ -53,7 +53,7 @@
 @import 'components/galaxy_status';
 @import 'components/mining';
 //@import 'components/research_construction_waves';
-@import "components/research_construction_waves2";
+@import 'components/research_construction_waves2';
 @import 'components/population';
 @import 'components/covert_ops';
 @import 'components/production';
