--- a/scss/components/_research_construction_waves2.scss
+++ b/scss/components/_research_construction_waves2.scss
@@ -66,7 +66,8 @@
 	.constructions {
 	  display: flex;
 	  flex-wrap: wrap;
-	  background: $color-secondary;
+	  //background: $color-secondary;
+	  background: $color-secondary-alt;
 	  width: 90%;
 	  max-width: 650px;
 	  border: none;
@@ -127,7 +128,8 @@
 			padding: 7px 50% 7px 28px;
 			display: flex;
 			flex-direction: column;
-			background: $color-secondary-alt;
+			background: $color-secondary;
+			box-shadow: inset 0 0 8px 2px rgba(#000, .25), 0 0 3px 3px rgba(#000, .15);
 			width: 100%;
 			z-index: 10;
 		  }
