--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -25,6 +25,8 @@ select,
   height: 21px;
   border: 1px solid rgba($color-primary, .5);
   border-radius: 3px;
+  border-image: linear-gradient(to right, rgba($color-primary, 0.25) 0%, rgba($color-primary, .55) 50%, rgba($color-primary, 0.25) 100%);
+  border-image-slice: 1;
   box-shadow: inset 0 2px 4px 2px rgba(#000, .4);
   transition: ease all .3s;
 
