--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -80,6 +80,10 @@
 
 	> ul {
 	  padding: 3.5px 0 7px;
+	  border: none;
+	  border-right: 1px solid transparent;
+	  border-image: linear-gradient(to bottom, rgba($color-primary, 0.3) 0%, transparent 75%);
+	  border-image-slice: 1;
 	  box-shadow: inset 0 0 8px 2px rgba(#000, .25), 3px 0 6px -3px rgba(#000, .25);
 
 	  > li {
