--- a/scss/components/_planet_details.scss
+++ b/scss/components/_planet_details.scss
@@ -1,5 +1,32 @@
 /* Planet Details
    -------------------------------------------------------*/
+#header,
+#planet_summary {
+  &:before,
+  &:after {
+	content: '';
+	display: block;
+	width: 0;
+	height: 100%;
+	border: none;
+	border-left: 1px solid transparent;
+	border-image: linear-gradient(to bottom, transparent 0%, rgba($color-primary, .3) 50%, transparent 100%);
+	border-image-slice: 1;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	z-index: 100;
+  }
+
+  &:before {
+	left: -1px;
+  }
+
+  &:after {
+	right: -1px;
+  }
+}
+
 #header {
   padding-top: 38px;
   display: flex;
@@ -70,7 +97,7 @@
 	max-width: unset;
 	//transition: ease background-color .5s;
 	position: absolute;
-	top: 0;
+	top: -1px;
 
 	&:hover {
 	  background: rgba(black, 1);
@@ -82,12 +109,16 @@
 
 	a {
 	  color: $color-offwhite !important;
-	  font-size: $text-small;
+	  font-size: 11px;
 	  font-weight: bold;
 	  text-transform: uppercase;
+	  line-height: 1;
 	  text-align: center;
-	  padding: 7px 0 !important;
+	  display: flex;
 	  flex-basis: 100%;
+	  align-items: center;
+	  justify-content: center;
+	  height: 30px;
 	  transition: ease all .5s;
 	}
 
@@ -341,28 +372,38 @@
 	grid-column: 2 / 2;
   }
 
-  &:before {
-	color: $color-offwhite;
-	font-size: $text-small;
-	font-weight: bold;
-	text-transform: uppercase;
-	text-align: center;
-	padding: 7px 0;
-	content: 'Planetary Development ';
-	display: block;
-	background: rgba(black, .6);
-	width: 100%;
-	border-bottom: 1px solid transparent;
-	border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
-	border-image-slice: 1;
-	position: absolute;
-	top: 0;
-	transition: ease all 0.5s;
+  &:hover {
+	#planet_summary_header {
+	  &:after {
+		background: rgba(black, 1);
+	  }
+	}
   }
 
-  &:hover {
-	&:before {
-	  background: rgba(black, 1);
+  #planet_summary_header {
+	position: relative;
+
+	&:after {
+	  color: $color-offwhite;
+	  font-size: 11px;
+	  font-weight: bold;
+	  text-transform: uppercase;
+	  line-height: 1;
+	  text-align: center;
+	  padding: 0;
+	  content: 'Planetary Development';
+	  display: flex;
+	  align-items: center;
+	  justify-content: center;
+	  background: rgba(black, .6);
+	  width: 100%;
+	  height: 29px;
+	  border-bottom: 1px solid transparent;
+	  border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
+	  border-image-slice: 1;
+	  position: absolute;
+	  top: -31px;
+	  transition: ease all 0.5s;
 	}
   }
 
@@ -391,7 +432,6 @@
   padding-right: 0;
 }
 
-#planet_summary_header,
 #planet_summary_footer {
   display: none;
 }
