--- a/scss/components/_research_construction_waves2.scss
+++ b/scss/components/_research_construction_waves2.scss
@@ -78,6 +78,30 @@
 	  margin: 0 auto 2rem;
 	  position: relative;
 
+	  &:before,
+	  &:after {
+		content: '';
+		display: block;
+		width: 0;
+		height: 100%;
+		border: none;
+		border-left: 1px solid transparent;
+		border-image: linear-gradient(to bottom, transparent 0%, rgba($color-primary, .3) 50%, transparent 100%);
+		border-image-slice: 1;
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		z-index: 100;
+	  }
+
+	  &:before {
+		left: -1px;
+	  }
+
+	  &:after {
+		right: -1px;
+	  }
+
 	  &:first-of-type {
 		margin-top: 14px;
 	  }
@@ -100,7 +124,7 @@
 
 		.description {
 		  font-size: $text-medium;
-		  padding: 14px 28px;
+		  padding: 14px 14px;
 
 		  a.desc_link {
 			top: -39px;
@@ -110,7 +134,7 @@
 		}
 
 		.title {
-		  padding: 7px 28px;
+		  padding: 7px 14px;
 		  background: $color-bg-th;
 		  margin-bottom: 0;
 		}
@@ -120,12 +144,12 @@
 		  flex-basis: 33%;
 		  position: absolute;
 		  top: 10px;
-		  right: 28px;
+		  right: 14px;
 		  z-index: 20;
 
 		  + p {
 			font-size: $text-small;
-			padding: 7px 50% 7px 28px;
+			padding: 7px 50% 7px 14px;
 			display: flex;
 			flex-direction: column;
 			background: $color-secondary;
@@ -151,11 +175,15 @@
 	  .construction_built {
 		font-size: 14px;
 		text-align: right;
-		padding: 0 28px 0 14px;
+		padding: 0 14px;
 		display: flex;
 		align-items: center;
 		justify-content: flex-end;
 		width: 100%;
+		border: none;
+		border: 1px solid transparent;
+		border-image: linear-gradient(to right, transparent 0%, rgba(82, 165, 248, 0.5) 50%, transparent 100%);
+		border-image-slice: 1;
 		margin-top: -43px;
 		z-index: 10;
 		order: 3;
@@ -198,7 +226,7 @@
 	  }
 
 	  .construction_build {
-		padding-left: 28px;
+		padding: 0 14px;
 		display: flex;
 		flex-wrap: wrap;
 		align-items: flex-start;
@@ -247,9 +275,8 @@
 		  display: flex;
 		  align-items: center;
 		  justify-content: flex-end;
-		  width: 213px;
+		  width: 241px;
 		  height: 29px;
-		  margin: 0 28px 0 0;
 
 		  &:nth-child(1) {
 			width: 100%;
@@ -378,7 +405,7 @@
 
 	h3 {
 	  text-align: center;
-	  padding: 7px 28px;
+	  padding: 7px 14px;
 	  background: $color-bg-th;
 	  margin: 0;
 	}
@@ -387,7 +414,7 @@
   .research_current,
   .research_next {
 	text-align: center;
-	padding: 7px 28px;
+	padding: 7px 14px;
 	width: 100% !important;
 
 	.time,
@@ -477,7 +504,7 @@
 
 	  .researchform p {
 		padding-right: 0;
-		margin-right: 28px;
+		margin-right: 14px;
 	  }
 	}
   }
@@ -497,7 +524,7 @@
   .completed {
 	.title {
 	  color: $color-text;
-	  padding: 7px 28px;
+	  padding: 7px 14px;
 	  background: $color-bg-th;
 	  margin: 0 auto;
 	  position: relative;
@@ -528,7 +555,7 @@
 
   p {
 	text-align: center !important;
-	padding: 7px 28px;
+	padding: 7px 14px;
 	width: 100%;
 	position: relative;
 
@@ -549,7 +576,7 @@
   }
 
   .scan_form {
-	padding-right: 28px;
+	padding-right: 14px;
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: flex-end;
@@ -638,14 +665,14 @@
 		  width: 100% !important;
 
 		  .title {
-			padding: 7px 28px;
+			padding: 7px 14px;
 			background: $color-bg-th;
 			margin-bottom: 0;
 		  }
 
 		  p {
 			text-align: center;
-			padding: 14px 28px;
+			padding: 14px;
 			background: $color-secondary;
 			border-bottom: 1px solid rgba(black, .25);
 			box-shadow: inset 0 0 8px 2px rgba(black, .25);
@@ -663,7 +690,7 @@
 		  .resources {
 			position: absolute;
 			top: 0;
-			right: 28px;
+			right: 14px;
 		  }
 		}
 
