--- a/scss/components/_universe.scss
+++ b/scss/components/_universe.scss
@@ -379,17 +379,17 @@ div[id^='page_universe_'] {
 
   table {
 	tr {
-	  &#intel_ally_row {
-		#intel_ally {
-		  text-align: center;
-		  white-space: nowrap;
-		  text-overflow: ellipsis;
-		  padding: 3.5px 0 3.5px 7px;
-		  display: inline-block;
-		  overflow: hidden;
-		  width: 102px;
-		  float: right;
-		}
+	  &#intel_ally_row #intel_ally,
+	  &#intel_rel_row #intel_rel,
+	  &#intel_nick_row #intel_nick {
+		text-align: center;
+		white-space: nowrap;
+		text-overflow: ellipsis;
+		padding: 3.5px 0 3.5px 7px;
+		display: inline-block;
+		overflow: hidden;
+		width: 102px;
+		float: right;
 	  }
 
 	  &#intel_rel_row {
