--- a/scss/components/_universe.scss
+++ b/scss/components/_universe.scss
@@ -668,8 +668,7 @@ div[id^='page_universe_'] {
 
 	table {
 	  width: auto;
-	  min-width: 450px;
-
+	  //min-width: 450px;
 	  tr {
 		th,
 		td {
@@ -703,8 +702,7 @@ div[id^='page_universe_'] {
 
 	table {
 	  width: auto;
-	  min-width: 450px;
-
+	  //min-width: 450px;
 	  th,
 	  td {
 		padding: 0 10.5px;
