--- a/scss/components/_history.scss
+++ b/scss/components/_history.scss
@@ -7,8 +7,7 @@
 
 	table {
 	  width: auto;
-	  min-width: 450px;
-
+	  //min-width: 450px;
 	  tr {
 		&:not(:nth-child(1)):not(:nth-child(2)) {
 		  th {
