--- a/scss/components/_planet_details.scss
+++ b/scss/components/_planet_details.scss
@@ -30,9 +30,9 @@
 #header {
   padding-top: 38px;
   display: flex;
-  flex-flow: row wrap;
   align-content: space-between;
   justify-content: space-around;
+  flex-flow: row wrap;
   background: $color-secondary;
   height: unset;
   border: 1px solid transparent;
@@ -62,6 +62,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-evenly;
+	background: none;
 	width: 50%;
 	max-width: 245px;
 	margin: 0 0 7px;
@@ -115,9 +116,9 @@
 	  line-height: 1;
 	  text-align: center;
 	  display: flex;
-	  flex-basis: 100%;
 	  align-items: center;
 	  justify-content: center;
+	  flex-basis: 100%;
 	  height: 30px;
 	  transition: ease all .5s;
 	}
@@ -354,9 +355,9 @@
   padding: 30px 0 0;
   display: flex;
   //background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
-  flex-flow: column nowrap;
   align-items: center;
   justify-content: space-around;
+  flex-flow: column nowrap;
   background: $color-secondary;
   height: unset;
   border: 1px solid transparent;
@@ -441,8 +442,8 @@
 #planet_summary_production {
   padding: 0 14px;
   display: flex;
-  flex-flow: row wrap;
   align-items: center;
+  flex-flow: row wrap;
   margin: 7px 0;
 
   span {
