Fixes the new quest system page
After the super smooth switchover to a new server, to fix performance the quest
overview was moved onto it's own page, and as a result it was having table rows
set to `display: flex;`. The overly large selector is needed (there may well be
a better way to resolve this, SCSS is not my forte) to override the `display: flex`.

Trying to use !important broke the hide/show functionality since it just sets `display: none`
on the tr element.

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -48,6 +48,7 @@
 @import 'components/planet_details';
 @import 'components/page_content';
 @import 'components/overview';
+@import 'components/quest_status';
 @import 'components/messages';
 @import 'components/galaxy_forum';
 @import 'components/galaxy_status';
