--- a/scss/components/_quest_status.css
+++ b/scss/components/_quest_status.css
@@ -1,5 +1,5 @@
 #page .container#javascriptwarning + #notice + .container#quest_system table tr {
-  display: table-row!important;
+  display: table-row;
 }
 
 #quest_system {
